// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates Text layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <TextView
      android:id=\\"@+id/container\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintLeft_toLeftOf=\\"parent\\"
      android:text=\\"Hello\\" />
</androidx.constraintlayout.widget.ConstraintLayout>"
`;

exports[`creates View layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <View
      android:id=\\"@+id/container\\"
      android:layout_width=\\"100dp\\"
      android:layout_height=\\"100dp\\"
      android:background=\\"#FAB\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintLeft_toLeftOf=\\"parent\\" />
</androidx.constraintlayout.widget.ConstraintLayout>"
`;

exports[`creates View with children layout 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android=\\"http://schemas.android.com/apk/res/android\\"
    xmlns:app=\\"http://schemas.android.com/apk/res-auto\\"
    xmlns:tools=\\"http://schemas.android.com/tools\\"
    android:layout_width=\\"match_parent\\"
    android:layout_height=\\"match_parent\\">
  <View
      android:id=\\"@+id/container\\"
      app:layout_constraintTop_toTopOf=\\"parent\\"
      app:layout_constraintLeft_toLeftOf=\\"parent\\">
    <View
        android:id=\\"@+id/child1\\"
        app:layout_constraintTop_toTopOf=\\"parent\\"
        app:layout_constraintLeft_toLeftOf=\\"parent\\" />
    <View
        android:id=\\"@+id/child2\\"
        app:layout_constraintTop_toTopOf=\\"parent\\"
        app:layout_constraintLeft_toLeftOf=\\"parent\\" />
  </View>
</androidx.constraintlayout.widget.ConstraintLayout>"
`;
